--- a/acts/index.html
+++ b/acts/index.html
@@ -86,8 +86,7 @@
                     <ul class="header__nav">
                         <li><a href="/" title="" target="_blank">Home</a></li>
                         <li><a href="#A" title="">About</a></li>
-                        <li><a href="#P" title="">Presentations and Discussions</a></li>
-                        <li><a href="#R" title="">References</a></li>
+                        <li><a href="#C" title="">Conference</a></li>
                         <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
                         <li><a href="24" title="" target="_blank">2024</a></li>
                         <li><a href="22-23" title="" target="_blank">2023</a></li>
@@ -155,11 +154,12 @@
         This semester, our discussion takes a concentrated form of Topological Data Analysis and Deep Learning Discussion Group on subsequent work to the paper 
         <a href="https://yifeizhu.github.io/tail.pdf" target="_blank">Topology-enhanced machine learning for consonant recognition</a> and on 
         <a href="https://yifeizhu.github.io/Chongqing.pdf" target="_blank">topological analysis and deep learning of human speech data</a>.  We meet <b>Thursdays biweekly 
-        at 3 pm in M5024</b>.  
+        at 3 pm in M5024</b>.  Meanwhile, we relegate general seminar talks on applied and computational topology to the <a href="/grad" title="" target="_blank">Graduate 
+        Topology Seminar</a>.  
     </p>
 
 
-<h3>Conference</h3>
+<h3><a id="C"></a>Conference</h3>
             
     <p>
         There will be a Great Bay Area Topology Conference on topological data analysis and deep learning from November 22 to 24, 2024 at SUSTech.  More information is 
