--- a/grad/index.html
+++ b/grad/index.html
@@ -269,12 +269,12 @@
     <p>
         Nov 18, '24, 
         <b>Yunhao Sun</b>, 
-        <i>TBA</i>
+        <i>Around algebraic cycles</i>
     </p>
     
     <p>
         Nov 25, '24, 
-        <b>Yifan Wu</b>, 
+        <b>Qingrui Qu</b>, 
         <i>TBA</i>
     </p>
     
