--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -355,6 +355,24 @@
             </div>
             </p>
 
+            <p>
+                Oct 31, '24,
+                <b>No seminar</b>
+            </p>
+
+            <p>
+                Nov 7, '24,
+                <b>Zhexi Zhang</b>,
+                <a onclick="toggle_visibility('5');">
+                    <i>Hyperbolic spaces and Higgs bundles</i>
+                </a>
+                <br />
+            <div id="5" class="toshow" style="display:none">
+                Main reference: Gothen, <a href="https://www.cim.pt/magazines/bulletin/45/article/333/pdf" 
+                target="_blank"><i>Geometry on surfaces and Higgs bundles</i></a>
+            </div>
+            </p>
+
 
             <h3><a id="P"></a>Previous Semesters</h3>
             <li><a href="23fal" target="_blank">Fall 2023</a>, Modular curves</li>
