--- a/acts/index.html
+++ b/acts/index.html
@@ -87,6 +87,7 @@
                         <li><a href="/" title="" target="_blank">Home</a></li>
                         <li><a href="#A" title="">About</a></li>
                         <li><a href="#C" title="">Conference</a></li>
+                        <li><a href="#P" title="">Presentations and Discussions</a></li>
                         <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
                         <li><a href="24" title="" target="_blank">2024</a></li>
                         <li><a href="22-23" title="" target="_blank">2023</a></li>
@@ -167,61 +168,15 @@
     </p>
 
 
-<!--
 <h3><a id="P"></a>Presentations and Discussions</h3>
 
     <p>
-        Jan 19, '24, 
-        <a onclick="toggle_visibility('24-1');"><i>Organizational meeting</i></a><br />
-        <div id="24-1" class="toshow" style="display:none">
-            <ul>
-                <li>
-                    Topology of Neural Network architectures: Feedforward NN $\to$ Recurrent NN $\to$ Reservoir Computing ($\to$ Time-Delayed RC) $\to$ engineering 
-                    implementation (photonic circuits?) ... CLDNN?  
-                </li>
-
-                <li>
-                    <a href="/acts/24/Zhang-20240119.pdf" target="_blank">Topological inputs for designing NNs</a>: Convolutional NN $\to$ Topological CNN, in the sense of 
-                    Carlsson et al. (from [Carlsson et al. 2008] to [Love et al. 2023]) 
-                </li>
-
-                <li>How are the above two aspects related?</li>
-
-                <li>
-                    <p><a href="/acts/24/Feng-20240119.pdf" target="_blank">Report on [Feng et al.]</a> and what's next?</p>
-                    
-                    <p>
-                        This research drew inspiration from Carlsson and his collaborators' discovery of the Klein-bottle distribution of high-contrast, local patches of 
-                        natural images [Carlsson et al. 2008], as well as their subsequent recent work on topological CNNs for learning image and even video data [Love et 
-                        al. 2023].  By analogy, we aim to understand a distribution space for speech data, even a directed graph structure on it modeling the complex 
-                        network of speech-signal sequences for practical purposes such as <a href="https://en.wikipedia.org/wiki/Speaker_diarisation" 
-                        target="_blank">speaker diarisation</a>, and how these topological inputs may enable smarter learning.  
-                    </p>
-
-                    <p>
-                        Other suggestions?  
-                        <ol>
-                            <li>Comparative non-topological machine learning experiment, input spectrograms instead of PD/MP: Done on Jan 25 and improved on Feb 22.</li>
-
-                            <li>How do weight vectors distribute in a CNN trained from the above item?</li>
-
-                            <li>Sequence: Attention mechanism</li>
-                                
-                            <li><a href="https://librosa.org/" target="_blank">librosa</a>: audio and music processing in Python</li>
-
-                            <li>
-                                Interpretable design of encoder–decoder bases from <a href="22-23/#M" target="_blank">Dr. Yu's Dec 26, '23 talk</a> on generative models for 
-                                speech processing 
-                            </li>
-                        </ol>
-                    </p>
-                </li>
-
-                <li>Derivation of the Klein-filter formulas in [Love et al. 2023]</li>
-            </ul>
-        </div>
+        Oct 31, '24, 
+        <b>Yifei Zhu</b>, 
+        <i>A recap and what's next?</i><br />
     </p>
 
+<!--
     <p>
         Feb 29, '24, 
         <b>Pingyao Feng</b>, 
