--- a/grad/index.html
+++ b/grad/index.html
@@ -257,7 +257,13 @@
     <p>
         Nov 4, '24, 
         <b>Qingrui Qu</b>, 
-        <i>Perspectives from differential and algebraic geometry on ruled surfaces</i>
+        <a onclick="toggle_visibility('30');">
+        <i>Perspectives from differential and algebraic geometry on ruled surfaces</i></a><br />
+        <div id="30" class="toshow" style="display:none">
+             In this presentation, we will begin by reviewing some basic concepts of classical differential geometry like curvature and torsion within the context of three-dimensional Euclidean space.  
+             Then we will briefly recall the structure theorems pertaining to curves and surfaces. Following this foundation, we will concentrate on the properties and classifications of ruled surfaces and developable surfaces.
+             We will then proceed to demonstrate several explicit examples that are naturally derived from discriminant varieties of polynomial equations, highlighting some intriguing generalizations along the way.
+         </div>     
     </p>
 
     <p>
