--- a/grad/index.html
+++ b/grad/index.html
@@ -888,7 +888,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                     <div class="s-footer__copyright">
                         <span>© Copyright Philosophy 2024</span> 
                         <span>Site Template by <a href="https://colorlib.com/" target="_blank">Colorlib</a></span>
-                        <span>Cover Photo by Yifei Zhu</span>
+                        <span>Header image created by DeepAI</span>
                     </div>
 
                     <div class="go-top">
