--- a/grad/index.html
+++ b/grad/index.html
@@ -258,7 +258,7 @@
         Nov 4, '24, 
         <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('30');">
-        <i>Perspectives from differential and algebraic geometry on ruled surfaces</i></a><br />
+        <i>Perspectives from differential and algebraic geometry on ruled surfaces I</i></a><br />
         <div id="30" class="toshow" style="display:none">
              In this presentation, we will begin by reviewing some basic concepts of classical differential geometry like curvature and torsion within the context of three-dimensional Euclidean space.  
              Then we will briefly recall the structure theorems pertaining to curves and surfaces. Following this foundation, we will concentrate on the properties and classifications of ruled surfaces and developable surfaces.
@@ -275,7 +275,17 @@
     <p>
         Nov 18, '24, 
         <b>Yunhao Sun</b>, 
-        <i>Around algebraic cycles</i>
+        <a onclick="toggle_visibility('31');">
+        <i>Around algebraic cycles</i></a><br />
+        <div id="31" class="toshow" style="display:none">
+            The history of algebraic cycles can be traced back to the nineteenth century. However, it was not until Grothendieck proposed his conjectures that the significance of this concept was 
+            fully recognized, leading to a flourishing of research in the field. Algebraic cycles are deeply interconnected with number theory, mathematical physics, differential geometry, 
+            and other areas. A fundamental object within the study of algebraic cycles is the Chow groups. It is now understood that Chow groups form part of a cohomology theory known as 
+            motivic cohomology. Motivic cohomology bears a similar relationship to algebraic $K$-theory as singular cohomology does to topological $K$-theory. We aspire for an abelian category of 
+            mixed motives such that motivic cohomology groups serve as extension groups for these mixed motives. Nevertheless, studying the general properties of Chow groups or performing concrete 
+            calculations remains exceedingly challenging. In this talk, we will introduce some basic properties and cultural knowledge regarding Chow groups. Due to technical complexities, only a 
+            few concrete examples will be provided.
+        </div>         
     </p>
     
     <p>
