--- a/grad/index.html
+++ b/grad/index.html
@@ -276,15 +276,22 @@
     <p>
         Nov 18, '24, 
         <b>Wenhui Yang</b>, 
-        <i>TBA</i>
+        <a onclick="toggle_visibility('31');">
+        <i>A brief introduction to Hitchin's equations</i></a><br />
+        <div id="31" class="toshow" style="display:none">
+            In this talk, we will give a brief introduction to Hitchin's equations, the solutions of which have a one-to-one correspondence 
+            to stable Higgs bundles, and thus they play an important role in non-abelian Hodge correspondence. 
+            And the muduli space of all solutions turns out to be a manifold with an extremely rich geometric structure which is worth studying.
+            Moreover, we can use some specific solutions to construct hyperbolic metric on a Riemann surface. 
+        </div>               
     </p>
     
     <p>
         Nov 25, '24, 
         <b>Yunhao Sun</b>, 
-        <a onclick="toggle_visibility('31');">
+        <a onclick="toggle_visibility('32');">
         <i>Around algebraic cycles</i></a><br />
-        <div id="31" class="toshow" style="display:none">
+        <div id="32" class="toshow" style="display:none">
             The history of algebraic cycles can be traced back to the nineteenth century. However, it was not until Grothendieck proposed his conjectures that the significance of this concept was 
             fully recognized, leading to a flourishing of research in the field. Algebraic cycles are deeply interconnected with number theory, mathematical physics, differential geometry, 
             and other areas. A fundamental object within the study of algebraic cycles is the Chow groups. It is now understood that Chow groups form part of a cohomology theory known as 
