--- a/grad/index.html
+++ b/grad/index.html
@@ -282,7 +282,7 @@
             In this talk, we will give a brief introduction to Hitchin's equations, the solutions of which have a one-to-one correspondence 
             to stable Higgs bundles, and thus they play an important role in non-abelian Hodge correspondence. 
             And the muduli space of all solutions turns out to be a manifold with an extremely rich geometric structure which is worth studying.
-            Moreover, we can use some specific solutions to construct hyperbolic metric on a Riemann surface. 
+            Moreover, we can use some specific solutions to construct hyperbolic metrics on a Riemann surface. 
         </div>               
     </p>
     
