--- a/grad/index.html
+++ b/grad/index.html
@@ -279,10 +279,8 @@
         <a onclick="toggle_visibility('31');">
         <i>A brief introduction to Hitchin's equations</i></a><br />
         <div id="31" class="toshow" style="display:none">
-            In this talk, we will give a brief introduction to Hitchin's equations, the solutions of which have a one-to-one correspondence 
-            to stable Higgs bundles, and thus they play an important role in non-abelian Hodge correspondence. 
-            And the muduli space of all solutions turns out to be a manifold with an extremely rich geometric structure which is worth studying.
-            Moreover, we can use some specific solutions to construct hyperbolic metrics on a Riemann surface. 
+            Hitchin's equations play an important role in non-abelian Hodge correspondence, and they bring together the subjects of Riemann geometry, topology, algebraic geometry and sympletic geometry in a harmonious way .
+            In this talk, we will give a brief introduction to Hitchin's equations, including the correspondence to stable Higgs bundle and basic properties of the moduli space of all solutions.    
         </div>               
     </p>
     
