--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -368,8 +368,26 @@
                 </a>
                 <br />
             <div id="5" class="toshow" style="display:none">
-                Main reference: Gothen, <a href="https://www.cim.pt/magazines/bulletin/45/article/333/pdf" 
-                target="_blank"><i>Geometry on surfaces and Higgs bundles</i></a>
+                <li>Preliminaries on hyperbolic geometry</li>
+
+                <li>Surface group representations and the Toledo invariant</li>
+
+                <li>
+                    Main reference: Gothen, <a href="https://www.cim.pt/magazines/bulletin/45/article/333/pdf" 
+                    target="_blank"><i>Geometry on surfaces and Higgs bundles</i></a>
+                </li>
+            </div>
+            </p>
+
+            <p>
+                Nov 14, '24,
+                <b>Zhexi Zhang</b>,
+                <a onclick="toggle_visibility('6');">
+                    <i>Hyperbolic spaces and Higgs bundles, II</i>
+                </a>
+                <br />
+            <div id="6" class="toshow" style="display:none">
+                
             </div>
             </p>
 
