--- a/grad/index.html
+++ b/grad/index.html
@@ -279,8 +279,8 @@
         <a onclick="toggle_visibility('31');">
         <i>A brief introduction to Hitchin's equations</i></a><br />
         <div id="31" class="toshow" style="display:none">
-            Hitchin's equations play an important role in non-abelian Hodge correspondence, and they bring together the subjects of Riemann geometry, topology, algebraic geometry and sympletic geometry in a harmonious way .
-            In this talk, we will give a brief introduction to Hitchin's equations, including the correspondence to stable Higgs bundle and basic properties of the moduli space of all solutions.    
+            Hitchin's equations play an important role in non-abelian Hodge correspondence, and they bring together the subjects of Riemannian geometry, topology, algebraic geometry and sympletic geometry in a harmonious way.
+            In this talk, we will give a brief introduction to Hitchin's equations, including the correspondence to stable Higgs bundles, as well as basic properties of the moduli space of all solutions.    
         </div>               
     </p>
     
@@ -292,11 +292,11 @@
         <div id="32" class="toshow" style="display:none">
             The history of algebraic cycles can be traced back to the nineteenth century. However, it was not until Grothendieck proposed his conjectures that the significance of this concept was 
             fully recognized, leading to a flourishing of research in the field. Algebraic cycles are deeply interconnected with number theory, mathematical physics, differential geometry, 
-            and other areas. A fundamental object within the study of algebraic cycles is the Chow groups. It is now understood that Chow groups form part of a cohomology theory known as 
+            and other areas. A fundamental object within the study of algebraic cycles is the Chow group. It is now understood that Chow groups form part of a cohomology theory known as 
             motivic cohomology. Motivic cohomology bears a similar relationship to algebraic $K$-theory as singular cohomology does to topological $K$-theory. We aspire for an abelian category of 
-            mixed motives such that motivic cohomology groups serve as extension groups for these mixed motives. Nevertheless, studying the general properties of Chow groups or performing concrete 
-            calculations remains exceedingly challenging. In this talk, we will introduce some basic properties and cultural knowledge regarding Chow groups. Due to technical complexities, only a 
-            few concrete examples will be provided.
+            mixed motives such that motivic cohomology groups serve as extension groups for these mixed motives. On the other hand, studying general properties of Chow groups and performing concrete 
+            calculations remain exceedingly challenging. In this talk, we will introduce some basic properties and perspectives regarding Chow groups. Due to technical complexity, a limited number of  
+            concrete examples will be provided.
         </div>         
     </p>
     
