--- a/grad/index.html
+++ b/grad/index.html
@@ -269,16 +269,22 @@
     <p>
         Nov 11, '24, 
         <b>Qingrui Qu</b>, 
-        <i>Perspectives from differential and algebraic geometry on ruled surfaces II</i>
-       
+        <a onclick="toggle_visibility('31');">
+        <i>Perspectives from differential and algebraic geometry on ruled surfaces II</i></a><br />
+        <div id="31" class="toshow" style="display:none">
+            Building upon last week's introduction to ruled surfaces, this talk focuses on discriminant surfaces arising from characteristic polynomials of 3-order matrices with special 
+            symmetries. Our investigation is motivated by condensed matter physics, particularly the study of Hamiltonians exhibiting Parity-Time symmetry and Lorentz pseudo-Hermitian symmetry. We will 
+            present several explicit examples of such discriminant surfaces and explore their geometric properties. Notably, we will showcase numerous counterexamples of non-ruled discriminant surfaces, leading to 
+            an intriguing question: what conditions ensure that a discriminant surface is ruled? 
+        </div>     
     </p>
     
     <p>
         Nov 18, '24, 
         <b>Wenhui Yang</b>, 
-        <a onclick="toggle_visibility('31');">
+        <a onclick="toggle_visibility('32');">
         <i>A brief introduction to Hitchin's equations</i></a><br />
-        <div id="31" class="toshow" style="display:none">
+        <div id="32" class="toshow" style="display:none">
             Hitchin's equations play an important role in non-abelian Hodge correspondence, and they bring together the subjects of Riemannian geometry, topology, algebraic geometry and sympletic geometry in a harmonious way.
             In this talk, we will give a brief introduction to Hitchin's equations, including the correspondence to stable Higgs bundles, as well as basic properties of the moduli space of all solutions.    
         </div>               
@@ -287,9 +293,9 @@
     <p>
         Nov 25, '24, 
         <b>Yunhao Sun</b>, 
-        <a onclick="toggle_visibility('32');">
+        <a onclick="toggle_visibility('33');">
         <i>Around algebraic cycles</i></a><br />
-        <div id="32" class="toshow" style="display:none">
+        <div id="33" class="toshow" style="display:none">
             The history of algebraic cycles can be traced back to the nineteenth century. However, it was not until Grothendieck proposed his conjectures that the significance of this concept was 
             fully recognized, leading to a flourishing of research in the field. Algebraic cycles are deeply interconnected with number theory, mathematical physics, differential geometry, 
             and other areas. A fundamental object within the study of algebraic cycles is the Chow group. It is now understood that Chow groups form part of a cohomology theory known as 
