--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -391,6 +391,43 @@
             </div>
             </p>
 
+            <p>
+                Nov 21, '24,
+                <b>Pengxu Zhang</b>,
+                <a onclick="toggle_visibility('7');">
+                    <i>Higgs bundles through the lens of moduli spaces, II</i>
+                </a>
+                <br />
+            <div id="7" class="toshow" style="display:none">
+                <li>
+                    I will first review the formulation of classical mechanics and introduce some basic concepts of 
+                    algebraic integrable systems which come out of classical mechanics. Then I will try to sketch the 
+                    last mentioned evidence for conjectural mirror symmetric $G$ and $G$-dual moduli spaces of Higgs 
+                    bundles at the end of the first part. For the second part of my talk, I will briefly introduce 
+                    some band theory and try to illustrate how Higgs bundle emerges in the study of band theory. At 
+                    the end, if time permits, I would like to draw some big pictures connecting previously mentioned 
+                    keywords such as mirror symmetry and geometric Langlands program.  
+                </li>
+
+                <li>
+                    Kiezle and Rayan, <a href="https://doi.org/10.1016/j.aim.2022.108664" target="_blank"><i>Hyperbolic 
+                    band theory through Higgs bundles</i></a>
+                </li>
+            </div>
+            </p>
+
+            <p>
+                Nov 28, '24,
+                <b>Zetu Chen</b>,
+                <a onclick="toggle_visibility('8');">
+                    <i>TBA</i>
+                </a>
+                <br />
+            <div id="8" class="toshow" style="display:none">
+                
+            </div>
+            </p>
+
 
             <h3><a id="P"></a>Previous Semesters</h3>
             <li><a href="23fal" target="_blank">Fall 2023</a>, Modular curves</li>
