--- a/acts/index.html
+++ b/acts/index.html
@@ -163,8 +163,8 @@
 <h3><a id="C"></a>Conference</h3>
             
     <p>
-        There will be a Great Bay Area Topology Conference on topological data analysis and deep learning from November 22 to 24, 2024 at SUSTech.  More information is 
-        upcoming.  
+        There will be a <a href="https://gbatc.github.io/" target="_blank">Great Bay Area Topology Conference</a> on topological data analysis and deep learning from 
+        November 22 to 24, 2024 at SUSTech.  All are welcome.  
     </p>
 
 
