--- a/acts/index.html
+++ b/acts/index.html
@@ -197,7 +197,7 @@
 
             <li>
                 Max Planck Institute for Dynamics and Self-Organization, 
-                <a href="https://scitechdaily.com/bach-vs-mozart-the-hidden-science-of-emotional-music-preferences/ target="_blank">Bach vs. Mozart: The Hidden Science of 
+                <a href="https://scitechdaily.com/bach-vs-mozart-the-hidden-science-of-emotional-music-preferences/" target="_blank">Bach vs. Mozart: The Hidden Science of 
                 Emotional Music Preferences</a>
             </li>
         </div>
