--- a/grad/index.html
+++ b/grad/index.html
@@ -285,9 +285,17 @@
         <a onclick="toggle_visibility('32');">
         <i>A brief introduction to Hitchin's equations</i></a><br />
         <div id="32" class="toshow" style="display:none">
+            <li>
             Hitchin's equations play an important role in non-abelian Hodge correspondence, and they bring together the subjects of Riemannian geometry, topology, algebraic geometry and sympletic geometry in a harmonious way.
-            In this talk, we will give a brief introduction to Hitchin's equations, including the correspondence to stable Higgs bundles, as well as basic properties of the moduli space of all solutions.    
-        </div>               
+            In this talk, we will give a brief introduction to Hitchin's equations, including the correspondence to stable Higgs bundles, as well as basic properties of the moduli space of all solutions.  
+            </li>
+
+            <li>
+                Main reference: N. J. Hitchin,
+                <a href="https://doi.org/10.1112/plms/s3-55.1.59" target="_blank"><i>The self-duality equations on a Riemann surface. Proceedings of the London Mathematical Society, s3-55(1):59–126, 1987.</i></a> 
+            </li>
+        </div>     
+    
     </p>
     
     <p>
