--- a/grad/index.html
+++ b/grad/index.html
@@ -287,7 +287,7 @@
         <div id="32" class="toshow" style="display:none">
             <li>
             Hitchin's equations play an important role in non-abelian Hodge correspondence, and they bring together the subjects of Riemannian geometry, topology, algebraic geometry and sympletic geometry in a harmonious way.
-            In this talk, we will give a brief introduction to Hitchin's equations, including the correspondence to stable Higgs bundles, as well as basic properties of the moduli space of all solutions.  
+            In this talk, we will give a brief introduction to Hitchin's equations, including the correspondence to stable Higgs bundles, as well as basic properties of the moduli space of irreducible solutions.  
             </li>
 
             <li>
