--- a/grad/index.html
+++ b/grad/index.html
@@ -326,6 +326,13 @@
         <i>TBA</i>
     </p>
     
+    <p>
+        Dec 16, '24, 
+        <b>Xiansheng Li</b> (University of Copenhagen), 
+        <i>TBA</i>
+    </p>
+
+    
 <h3>Talks in Spring 2024 (mostly Tuesdays 4:20 in M5024)</h3>
 
     <p>
