--- a/grad/index.html
+++ b/grad/index.html
@@ -294,6 +294,7 @@
                 Main reference: N. J. Hitchin,
                 <a href="https://doi.org/10.1112/plms/s3-55.1.59" target="_blank"><i>The self-duality equations on a Riemann surface. Proceedings of the London Mathematical Society, s3-55(1):59–126, 1987.</i></a> 
             </li>
+            <li><a href="24fal/1118-Yang.pdf" target="_blank">Slides</a></li>
         </div>     
     
     </p>
@@ -304,13 +305,16 @@
         <a onclick="toggle_visibility('33');">
         <i>Around algebraic cycles</i></a><br />
         <div id="33" class="toshow" style="display:none">
-            The history of algebraic cycles can be traced back to the nineteenth century. However, it was not until Grothendieck proposed his conjectures that the significance of this concept was 
+            <li>
+                The history of algebraic cycles can be traced back to the nineteenth century. However, it was not until Grothendieck proposed his conjectures that the significance of this concept was 
             fully recognized, leading to a flourishing of research in the field. Algebraic cycles are deeply interconnected with number theory, mathematical physics, differential geometry, 
             and other areas. A fundamental object within the study of algebraic cycles is the Chow group. It is now understood that Chow groups form part of a cohomology theory known as 
             motivic cohomology. Motivic cohomology bears a similar relationship to algebraic $K$-theory as singular cohomology does to topological $K$-theory. We aspire for an abelian category of 
             mixed motives such that motivic cohomology groups serve as extension groups for these mixed motives. On the other hand, studying general properties of Chow groups and performing concrete 
             calculations remain exceedingly challenging. In this talk, we will introduce some basic properties and perspectives regarding Chow groups. Due to technical complexity, a limited number of  
             concrete examples will be provided.
+            </li>
+             <li><a href="24fal/1125-Sun.pdf" target="_blank">Slides</a></li>
         </div>         
     </p>
     
