--- a/grad/index.html
+++ b/grad/index.html
@@ -324,10 +324,14 @@
         <a onclick="toggle_visibility('34');">
         <i>A brief introduction to intersection homolgy</i></a><br />
         <div id="34" class="toshow" style="display:none">
-            In recent years, intersection homology has become an indispensable tool for studying the topology of singular spaces.
+            <li>
+                 In recent years, intersection homology has become an indispensable tool for studying the topology of singular spaces.
             While the main results of usual homology theories often fail for singular spaces, intersection homology effectively recovers these properties, bridging this critical gap.  
             In this talk, I will present the foundational concepts of GM intersection homology (including simplicial intersection homology, PL intersection homology, and singular intersection homology) and some examples. 
             Finally, I may explore the topic of non-GM (Goresky-MacPherson) intersection homology.
+            </li>
+            
+             <li><a href="24fal/1202-Fang.pdf" target="_blank">Notes</a></li>
         </div>
     </p>
 
