--- a/acts/index.html
+++ b/acts/index.html
@@ -206,9 +206,19 @@
     <p>
         Nov 28, '24, 
         <b>Zeyang Ding</b>, 
-        <a onclick="toggle_visibility('24-9');"><i>TBA</i></a><br />
+        <a onclick="toggle_visibility('24-9');"><i>Topological fingerprints for audio identification</i></a><br />
         <div id="24-9" class="toshow" style="display:none">
-            
+            <li><a href="/acts/24/Ding-20241128.pdf" target="_blank">Notes</a></li>
+
+            <li>
+                Ximena Fernández, <a href="https://ximenafernandez.github.io/reveal.js-presentations/slides/AudioID_SPIRES.html#/" target="_blank">Applying Persistent 
+                Homology in the Music Industry</a>
+            </li>
+
+            <li>
+                Wojciech Reise, Ximena Fernández, Maria Dominguez, Heather A. Harrington, <a href="https://epubs.siam.org/doi/10.1137/23M1605090" 
+                target="_blank">Topological Fingerprints for Audio Identification</a>
+            </li>
         </div>
     </p>    
 
