--- a/grad/index.html
+++ b/grad/index.html
@@ -344,7 +344,7 @@
              Mordell-Weil theorem states that for an abelian variety $A$ over a number field $K$, $K$-rational points of $A$ is a finitely generated group.
              Except the way using Weil height as a quadratic form satisfying Northcott property to prove the case for dimension one, i.e. elliptic curve, 
              we can prove it in the language of algebraic geometry by a technical method of relative effective Cartier divisor. 
-             Effective Cartier divisors “equal” invertible ideal sheaves in some sense. And invertible sheaf is the locally free sheaf of rank 1.
+             Effective Cartier divisors “equal” invertible ideal sheaves in some sense. And invertible sheaf is the locally free sheaf of rank $1$.
              In this talk, I will introduce locally free sheaves, the natural one-to-one correspondence between locally free sheaves and vector bundles, and give some examples of invertible sheaves on projective line.
          </div>
     </p>
