--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -392,7 +392,19 @@
             </p>
 
             <p>
-                Nov 21, '24,
+                Nov 21, '24, <b>Zetu Chen</b>, <i>$p$-adic Riemann–Hilbert and Hodge correspondences and rigid analytic geometry</i>
+            </p>
+
+            <p>
+                Nov 28, '24, <b>Zetu Chen</b>, <i>$p$-adic Riemann–Hilbert and Hodge correspondences and rigid analytic geometry, II</i>
+            </p>
+
+            <p>
+                Dec 5, '24, <b>No seminar</b>
+            </p>
+
+            <p>
+                Dec 12, '24,
                 <b>Pengxu Zhang</b>,
                 <a onclick="toggle_visibility('7');">
                     <i>Higgs bundles through the lens of moduli spaces, II</i>
@@ -417,15 +429,9 @@
             </p>
 
             <p>
-                Nov 28, '24,
-                <b>Zetu Chen</b>,
-                <a onclick="toggle_visibility('8');">
-                    <i>TBA</i>
-                </a>
-                <br />
-            <div id="8" class="toshow" style="display:none">
-                
-            </div>
+                Dec 16–20, '24,
+                <a href="https://huigaomath.github.io/events/2014_Dec_Handbook.pdf#page=4" target="_blank"><b>Arithmetic geometry conference talks</b></a> 
+                (some of them are related to what we've been thinking about this semester) 
             </p>
 
 
