--- a/acts/index.html
+++ b/acts/index.html
@@ -222,6 +222,10 @@
         </div>
     </p>    
 
+    <p>
+        Dec 12, '24, <b>Coding session</b>
+    </p>    
+
 
 <br /><br /><br />
 <p></p>
