--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -392,11 +392,11 @@
             </p>
 
             <p>
-                Nov 21, '24, <b>Zetu Chen</b>, <i>$p$-adic Riemann–Hilbert and Hodge correspondences and rigid analytic geometry</i>
+                Nov 21, '24, <b>Zetu Chen</b>, <i>$p$-adic Riemann–Hilbert and Hodge correspondences, and rigid analytic geometry</i>
             </p>
 
             <p>
-                Nov 28, '24, <b>Zetu Chen</b>, <i>$p$-adic Riemann–Hilbert and Hodge correspondences and rigid analytic geometry, II</i>
+                Nov 28, '24, <b>Zetu Chen</b>, <i>$p$-adic Riemann–Hilbert and Hodge correspondences, and rigid analytic geometry, II</i>
             </p>
 
             <p>
