--- a/index.html
+++ b/index.html
@@ -179,6 +179,18 @@
         </div>
     </p>
 
+    <p>
+        Nov 27, '24 (Wednesday, 3:00–4:00 pm, Taizhou Hall 240A), 
+        <b>Zhouli Xu</b> (University of California, Los Angeles), 
+        <a onclick="toggle_visibility('24-2');"><i>Homotopy groups of spheres</i></a><br />
+        <div id="24-2" class="toshow" style="display:none">
+            Up to continuous deformations, all based continuous maps between two spheres form an abelian group, and is called a homotopy group of the target sphere.  It 
+            turns out that determination of these groups is a very hard problem in topology.  The structures of the homotopy groups of spheres are closely related to many 
+            topics in topology, such as the Hopf invariant problem, the Kervaire invariant problem, and the number of smooth structures on a given sphere.  
+            <br />
+            In this talk, I will review some classical methods of computing these groups, and discuss some recent progress.  
+        </div>
+    </p>
 
 <br /><br /><br />
 <p></p>
