--- a/grad/index.html
+++ b/grad/index.html
@@ -352,7 +352,23 @@
     <p>
         Dec 16, '24, 
         <b>Xiansheng Li</b> (University of Copenhagen), 
-        <i>TBA</i>
+        <a onclick="toggle_visibility('36');">
+        <i>What is ${\rm D}(\mathbb{S})$?</i></a><br />
+        <div id="36" class="toshow" style="display:none">
+            In this talk, I will <b>not</b> provide a definitive answer to the question posed in the title.  Instead, I will 
+            outline a general framework for "deriving" a stable $\infty$-category in a manner relative to a well-behaved 
+            homology theory.  
+            <br />
+            This construction can be understood as:
+            <ol>
+                <li>An $\infty$-categorical deformation, and </li>
+
+                <li>A suitable context for the Goerss–Hopkins theory.  </li>
+            </ol>
+            A key example of this framework is the (connective) synthetic spectra $\rm Syn$, defined relative to an Adams-type 
+            spectrum $E$.  This construction provides a way to view $\rm Syn$ as a "derived $\infty$-category of spectra," 
+            capturing $\infty$-categorical structures that reflect the properties of $E$-based Adams spectral sequences.
+        </div>
     </p>
 
     
