--- a/grad/index.html
+++ b/grad/index.html
@@ -350,7 +350,7 @@
     </p>
     
     <p>
-        Dec 16, '24, 
+        Dec 16, '24 (zoom 587 160 6136), 
         <b>Xiansheng Li</b> (University of Copenhagen), 
         <a onclick="toggle_visibility('36');">
         <i>What is ${\rm D}(\mathbb{S})$?</i></a><br />
