--- a/grad/index.html
+++ b/grad/index.html
@@ -273,7 +273,7 @@
         <i>Perspectives from differential and algebraic geometry on ruled surfaces II</i></a><br />
         <div id="31" class="toshow" style="display:none">
             Building upon last week's introduction to ruled surfaces, this talk focuses on discriminant surfaces arising from characteristic polynomials of 3-order matrices with special 
-            symmetries. Our investigation is motivated by condensed matter physics, particularly the study of Hamiltonians exhibiting Parity-Time symmetry and Lorentz pseudo-Hermitian symmetry. We will 
+            symmetries. Our investigation is motivated by condensed matter physics, particularly the study of Hamiltonians exhibiting Parity-Time symmetry and Minkowski-like pseudo-Hermitian symmetry. We will 
             present several explicit examples of such discriminant surfaces and explore their geometric properties. Notably, we will showcase numerous counterexamples of non-ruled discriminant surfaces, leading to 
             an intriguing question: what conditions ensure that a discriminant surface is ruled? 
         </div>     
@@ -371,6 +371,15 @@
         </div>
     </p>
 
+    <p>
+        Dec 23, '24, 
+        <b>Siheng Yi</b>, 
+         <a onclick="toggle_visibility('37');">
+         <i> TBA </i></a><br />
+         <div id="37" class="toshow" style="display:none">
+         TBA    
+         </div>
+    </p>
     
 <h3>Talks in Spring 2024 (mostly Tuesdays 4:20 in M5024)</h3>
 
