--- a/grad/index.html
+++ b/grad/index.html
@@ -379,9 +379,13 @@
         Dec 23, '24, 
         <b>Siheng Yi</b>, 
         <a onclick="toggle_visibility('37');">
-        <i>TBA</i></a><br />
+        <i> Harder-Narasimhan Filtrations of Persistence Modules </i></a><br />
         <div id="37" class="toshow" style="display:none">
-            TBA    
+            The Harder-Narasimhan type of a quiver representation is a discrete invariant parameterised by a real-valued function (called a central charge) defined on the vertices of the quiver.
+            In this talk, we will investigate the strength of Harder-Narasimhan types for quiver representations which arise in the study of persistence modules. 
+            We introduce the skyscraper invariant, which amalgamates the HN types along central charges supported at single vertices, and generalise the rank invariant from multiparameter 
+            persistence modules to arbitrary quiver representations. 
+            And we will show that the skyscraper invariant is strictly finer than the rank invariant in full generality. 
         </div>
     </p>
 
