--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -352,6 +352,7 @@
 
                     <li>The moduli space ${\mathscr M}_{n,d}^g$ of (stable) Higgs bundles</li>
                 </ol>
+                <li><a href="24fal/1024-Wei.pdf" target="_blank">Notes</a></li>
             </div>
             </p>
 
