--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -383,13 +383,9 @@
             <p>
                 Nov 14, '24,
                 <b>Zhexi Zhang</b>,
-                <a onclick="toggle_visibility('6');">
+                <a href="24fal/1114-Zhang.pdf" target="_blank">
                     <i>Hyperbolic spaces and Higgs bundles, II</i>
                 </a>
-                <br />
-            <div id="6" class="toshow" style="display:none">
-                
-            </div>
             </p>
 
             <p>
@@ -407,11 +403,11 @@
             <p>
                 Dec 12, '24,
                 <b>Pengxu Zhang</b>,
-                <a onclick="toggle_visibility('7');">
+                <a onclick="toggle_visibility('6');">
                     <i>Higgs bundles through the lens of moduli spaces, II</i>
                 </a>
                 <br />
-            <div id="7" class="toshow" style="display:none">
+            <div id="6" class="toshow" style="display:none">
                 <li>
                     I will first review the formulation of classical mechanics and introduce some basic concepts of 
                     algebraic integrable systems which come out of classical mechanics. Then I will try to sketch the 
