--- a/acts/index.html
+++ b/acts/index.html
@@ -226,6 +226,10 @@
         Dec 12, '24, <b>Coding session</b>
     </p>    
 
+    <p>
+        Dec 26, '24, <b>Siheng Yi</b>, <i>From graph neural networks to simplicial attention networks</i>
+    </p>    
+
 
 <br /><br /><br />
 <p></p>
