--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -422,6 +422,10 @@
                     Kiezle and Rayan, <a href="https://doi.org/10.1016/j.aim.2022.108664" target="_blank"><i>Hyperbolic 
                     band theory through Higgs bundles</i></a>
                 </li>
+
+                <li>
+                    <a href="24fal/1212-Zhang.pdf" target="_blank">Notes</a> (incomplete and in progress)
+                </li>
             </div>
             </p>
 
