--- a/grad/index.html
+++ b/grad/index.html
@@ -389,6 +389,27 @@
         </div>
     </p>
 
+    <p>
+        Jan 6, '25, 
+        <b>Jiacheng Liang</b> (Johns Hopkins University), 
+        <a onclick="toggle_visibility('38');">
+        <i>From topology to topos</i></a><br />
+        <div id="38" class="toshow" style="display:none">
+            <li>In this talk, I will discuss the categorification of topology.</li>
+
+            <li>
+                References:
+                <ul>
+                    <li>Jacob Lurie, <a href="https://www.math.ias.edu/~lurie/papers/SAG-rootfile.pdf" target="_blank">Spectral algebraic geometry</a>, Chapter 1, Section 1.5</li>
+
+                    <li>Jacob Lurie, <a href="https://www.math.ias.edu/~lurie/papers/HA.pdf" target="_blank">Higher algebra</a>, Appendix A.8</li>
+
+                    <li>Charles Rezk, <a href="https://rezk.web.illinois.edu/recollement.pdf" target="_blank">What are recollements in stable homotopy theory?</a></li>
+                </ul>
+            </li>
+        </div>
+    </p>
+
     
 <h3>Talks in Spring 2024 (mostly Tuesdays 4:20 in M5024)</h3>
 
