--- a/acts/index.html
+++ b/acts/index.html
@@ -230,6 +230,10 @@
         Dec 26, '24, <b>Siheng Yi</b>, <i>From graph neural networks to simplicial attention networks</i>
     </p>    
 
+    <p>
+        Jan 10, '25, <b>Writing session</b>
+    </p>    
+
 
 <br /><br /><br />
 <p></p>
