--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -275,7 +275,7 @@
 
                             <li>
                                 Bulk–edge correspondence and (geometric) Langlands correspondence: roles played by Higgs
-                                bundles, explicit examples and calculations (Kiezle and
+                                bundles, explicit examples and calculations (Kienzle and
                                 Rayan, <a href="https://doi.org/10.1016/j.aim.2022.108664" target="_blank"><i>Hyperbolic
                                         band theory through Higgs bundles</i></a>)
                             </li>
@@ -419,7 +419,7 @@
                 </li>
 
                 <li>
-                    Kiezle and Rayan, <a href="https://doi.org/10.1016/j.aim.2022.108664" target="_blank"><i>Hyperbolic 
+                    Kienzle and Rayan, <a href="https://doi.org/10.1016/j.aim.2022.108664" target="_blank"><i>Hyperbolic 
                     band theory through Higgs bundles</i></a>
                 </li>
 
