--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -438,10 +438,11 @@
 
             <h3><a id="P"></a>Previous Semesters</h3>
             <li><a href="23fal" target="_blank">Fall 2023</a>, Modular curves</li>
-            <li><a href="23spr/syllabus.pdf" target="_blank">Spring 2023</a>, Knot theory and low-dimensional topology
+            <li>
+                <a href="https://pxzsustech.notion.site/Knot-Theory-and-Low-Dimensional-Topology-Spring-2023-e950e35c261043a5a005a2c83c64be98" 
+                target="_blank">Spring 2023</a>, Knot theory and low-dimensional topology 
             </li>
-            <li><a href="22fal" target="_blank">Fall 2022</a>, Modular forms and their applications to geometry and
-                topology</li>
+            <li><a href="22fal" target="_blank">Fall 2022</a>, Modular forms and their applications to geometry and topology</li>
             <li><a href="/acts/21-22/#22spr" target="_blank">Spring 2022</a>, Topological data analysis</li>
             <li><a href="21fal" target="_blank">Fall 2021</a>, Differential forms in algebraic topology</li>
             <li><a href="21spr" target="_blank">Spring 2021</a>, The wild world of 4-manifolds</li>
